--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -62,5 +62,17 @@
 
     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
 
-
+    <Button
+        android:id="@+id/pd_add_to_cart_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@android:color/holo_green_light"
+        android:text="Add to Cart"
+        android:textColor="@android:color/white"
+        android:textSize="18dp" />
 </RelativeLayout>
