--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -26,7 +26,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:text="Close"
+                    android:text="@string/close"
                     android:textColor="@android:color/white"
                     android:textSize="17sp"
                     android:textStyle="bold" />
@@ -37,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_marginRight="10dp"
-                    android:text="Update"
+                    android:text="@string/update"
                     android:textColor="@android:color/white"
                     android:textSize="17sp"
                     android:textStyle="bold" />
@@ -64,43 +64,38 @@
         android:id="@+id/profile_image_change_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change Profile"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="4dp"
-        android:textColor="@android:color/black"
         android:layout_below="@+id/settings_profile_image"
         android:layout_centerHorizontal="true"
-        />
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="10dp"
+        android:text="@string/changeprofile"
+        android:textColor="@android:color/black"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/settings_phone_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_image_change_btn"
-        android:hint="Phone Number..."
-        android:layout_margin="15dp"
-        android:padding="10dp"
-        />
-
-    <EditText
-        android:id="@+id/settings_full_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/settings_phone_number"
-        android:hint="Full Name..."
-        android:layout_margin="15dp"
-        android:padding="10dp"
-        />
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:hint="@string/cntnumber"
+        android:padding="10dp" />
 
     <EditText
         android:id="@+id/settings_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/settings_full_name"
-        android:hint="Address..."
-        android:layout_margin="15dp"
-        android:padding="10dp"
-        />
+        android:layout_below="@+id/settings_phone_number"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:hint="@string/Residennceadd"
+        android:padding="10dp" />
+
+
 </RelativeLayout>
