--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -94,7 +94,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:hint="@string/Residennceadd"
+        android:hint="Residence Address"
         android:padding="10dp" />
 
 
