--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bck1"
+    android:background="@drawable/bg_img001"
     tools:context=".MainActivity">
     <ImageView
         android:id="@+id/app_logo"
@@ -26,7 +26,7 @@
         android:text="LIFE IS SHORT BUY IT NOW"
         android:textAlignment="viewEnd"
         android:textAllCaps="false"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/design_default_color_background"
         android:textSize="30sp"
         android:textStyle="bold|italic" />
 
