--- a/app/src/main/res/layout/activity_admin_add_new_product.xml
+++ b/app/src/main/res/layout/activity_admin_add_new_product.xml
@@ -22,14 +22,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/select_product_image"
-        android:inputType="textMultiLine"
-        android:layout_marginTop="20dp"
-        android:padding="20dp"
-        android:hint="Product Name..."
         android:layout_marginLeft="45dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="45dp"
         android:background="@drawable/input_design"
-        />
+        android:hint="@string/prductname"
+        android:inputType="textMultiLine"
+        android:padding="20dp" />
 
 
     <EditText
@@ -37,14 +36,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/product_name"
-        android:inputType="textMultiLine"
-        android:layout_marginTop="6dp"
-        android:padding="20dp"
-        android:hint="Product Description..."
         android:layout_marginLeft="45dp"
+        android:layout_marginTop="6dp"
         android:layout_marginRight="45dp"
         android:background="@drawable/input_design"
-        />
+        android:hint="@string/prduct_description"
+        android:inputType="textMultiLine"
+        android:padding="20dp" />
 
 
     <EditText
@@ -52,14 +50,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/product_description"
-        android:inputType="textMultiLine"
-        android:layout_marginTop="6dp"
-        android:padding="20dp"
-        android:hint="Product Price..."
         android:layout_marginLeft="45dp"
+        android:layout_marginTop="6dp"
         android:layout_marginRight="45dp"
         android:background="@drawable/input_design"
-        />
+        android:hint="@string/prductprice"
+        android:inputType="textMultiLine"
+        android:padding="20dp" />
 
 
     <Button
@@ -72,7 +69,7 @@
         android:layout_marginRight="45dp"
         android:background="@android:color/holo_green_light"
         android:padding="17dp"
-        android:text="Add Product"
+        android:text="@string/addprudct"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
