--- a/app/src/main/res/layout/activity_admin_category.xml
+++ b/app/src/main/res/layout/activity_admin_category.xml
@@ -146,7 +146,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:background="@android:color/holo_green_light"
-        android:text="Check New Orders"
+        android:text="@string/checkneworders"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="25dp" />
@@ -160,7 +160,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="15dp"
         android:background="@android:color/holo_green_light"
-        android:text="Logout"
+        android:text="@string/logoutbtn"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="25dp" />
