--- a/app/src/main/res/layout/activity_admin_new_orders.xml
+++ b/app/src/main/res/layout/activity_admin_new_orders.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="New Orders"
+            android:text="@string/neworderheading"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="25dp"
