changes in string cart

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Total Price"
+            android:text="@string/totalprice"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="20dp"
