changes in string cart next btn

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@android:color/holo_green_light"
-        android:text="Next"
+        android:text="@string/nextbtn"
         android:textColor="@android:color/white"
         android:textSize="25dp"
 
