--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,36 +20,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/register_applogo"
-        android:background="@drawable/input_design"
-        android:padding="20dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:hint="Name"
+        android:background="@drawable/input_design"
+        android:hint="@string/enterthename"
         android:inputType="text"
+        android:padding="20dp"
         android:textColor="@color/cardview_light_background"
         android:textColorHint="@color/cardview_light_background"
-        android:textStyle="bold"
-
         android:textSize="19sp"
-        />
+
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/register_phone_number_input"
-        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/register_username_input"
-        android:background="@drawable/input_design"
-        android:padding="20dp"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="6dp"
         android:layout_marginRight="15dp"
-        android:hint="Phone Number"
+        android:background="@drawable/input_design"
+        android:hint="@string/enterthephonenumber"
         android:inputType="number"
+        android:padding="20dp"
         android:textColor="@color/cardview_light_background"
         android:textColorHint="@color/cardview_light_background"
         android:textSize="19sp"
-        android:layout_marginTop="6dp"
-        />
+        android:textStyle="bold" />
 
 
     <EditText
@@ -57,18 +55,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/register_phone_number_input"
-        android:background="@drawable/input_design"
-        android:padding="20dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         android:layout_marginTop="6dp"
-        android:hint="Password"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/input_design"
+        android:hint="@string/inputnewpassword"
         android:inputType="textPassword"
-        android:textStyle="bold"
+        android:padding="20dp"
         android:textColor="@color/cardview_light_background"
         android:textColorHint="@color/cardview_light_background"
         android:textSize="19sp"
-        />
+        android:textStyle="bold" />
 
 
     <Button
@@ -81,7 +78,7 @@
         android:layout_marginRight="15dp"
         android:background="@drawable/buttons"
         android:padding="17dp"
-        android:text="Create Account"
+        android:text="@string/createaccountbtn"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
