--- a/app/src/main/res/layout/orders_layout.xml
+++ b/app/src/main/res/layout/orders_layout.xml
@@ -78,7 +78,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:background="@android:color/white"
-            android:text="Show User Order Product"
+            android:text="@string/showneworders"
             android:textColor="@android:color/holo_green_light"
             android:textSize="20dp"
 
