--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,28 +9,31 @@
 
     <ImageView
         android:id="@+id/app_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="128dp"
+        android:layout_width="265dp"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/main_join_now_btn"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="272dp"
-        android:layout_marginBottom="363dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-24dp"
+        android:layout_marginTop="102dp"
+        android:layout_marginEnd="-44dp"
+        android:layout_marginBottom="306dp"
+        android:layout_toStartOf="@+id/app_slogan"
         android:src="@drawable/logo3" />
 
     <TextView
         android:id="@+id/app_slogan"
-        android:layout_width="wrap_content"
-        android:layout_height="161dp"
+        android:layout_width="243dp"
+        android:layout_height="168dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="128dp"
-        android:layout_marginEnd="9dp"
+        android:layout_marginTop="133dp"
+        android:layout_marginEnd="0dp"
         android:text="DREAM MART"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/design_default_color_background"
-        android:textSize="40sp"
+        android:textSize="32sp"
         android:textStyle="bold|italic" />
 
     <Button
