--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,14 +6,32 @@
     android:layout_height="match_parent"
     android:background="@drawable/backll"
     tools:context=".RegisterActivity">
+
     <ImageView
         android:id="@+id/register_applogo"
         android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:src="@drawable/applogo"
-        android:layout_centerHorizontal="true"
+        android:layout_height="130dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-83dp"
         android:layout_marginTop="180dp"
-        />
+        android:padding="5dp"
+        android:src="@drawable/logo3" />
+
+    <TextView
+        android:id="@+id/app_slogan"
+        android:layout_width="243dp"
+        android:layout_height="168dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="222dp"
+        android:layout_marginEnd="-2dp"
+        android:text="DREAM MART"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@color/design_default_color_background"
+        android:textSize="33sp"
+        android:textStyle="bold|italic" />
 
     <EditText
         android:id="@+id/register_username_input"
