--- a/app/src/main/res/layout/activity_custom_profile.xml
+++ b/app/src/main/res/layout/activity_custom_profile.xml
@@ -84,6 +84,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:hint="@string/profile_phone_number"
+        android:maxLength="10"
         android:padding="10dp" />
 
     <EditText
