--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_image_change_btn"
         android:layout_marginStart="15dp"
-
+        android:maxLength="10"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
