--- a/app/src/main/res/layout/activity_confirm_final_order.xml
+++ b/app/src/main/res/layout/activity_confirm_final_order.xml
@@ -42,6 +42,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginRight="20dp"
         android:hint="@string/enteryourphonenumber"
+        android:maxLength="10"
         android:inputType="number" />
 
     <EditText
