--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,7 +28,7 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Delivery Details"
+            android:title="Resident Details"
             android:iconTint="@android:color/white"/>
         <item
             android:id="@+id/nav_logout"
