--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,7 +26,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="222dp"
         android:layout_marginEnd="-2dp"
-        android:text="DREAM MART"
+        android:text="@string/dreammart"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/design_default_color_background"
