--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/background_one"
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
     <com.google.android.material.appbar.AppBarLayout
@@ -48,51 +49,75 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/settings_profile_image"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:src="@drawable/profile"
-        android:layout_below="@+id/app_bar_settings"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        />
-
     <TextView
-        android:id="@+id/profile_image_change_btn"
-        android:layout_width="wrap_content"
+        android:id="@+id/txt"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Change Profile"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="4dp"
-        android:textColor="@android:color/black"
-        android:layout_below="@+id/settings_profile_image"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp"
+        android:text="@string/hdng"
+
+        android:textAlignment="center"
+        android:textColor="@android:color/primary_text_light"
+        android:textColorHint="#F81E1D1D"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/postal_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="252dp"
+
+        android:layout_marginRight="20dp"
+        android:hint="@string/PostaName"
+        android:textColorHint="@color/cardview_dark_background" />
 
     <EditText
         android:id="@+id/settings_phone_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/profile_image_change_btn"
-        android:hint="Phone Number..."
-        android:maxLength="10"
-        android:layout_margin="15dp"
+        android:layout_below="@+id/postal_name"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="15dp"
 
+        android:layout_marginTop="343dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:hint="@string/phonenumber"
+        android:inputType="number"
+        android:maxLength="10"
         android:padding="10dp"
-        />
+        android:textColorHint="@color/cardview_dark_background" />
 
     <EditText
         android:id="@+id/settings_address"
-        android:layout_width="match_parent"
+        android:layout_width="376dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/settings_phone_number"
-        android:hint="Address..."
-        android:layout_margin="15dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="15dp"
+        android:hint="@string/address"
         android:padding="10dp"
-        />
+        android:textColorHint="@color/cardview_dark_background" />
+
+    <EditText
+        android:id="@+id/shippment_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/settings_phone_number"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+
+        android:layout_marginBottom="298dp"
+        android:hint="Name of the reciever"
+        android:textColorHint="@color/colorText" />
 </RelativeLayout>
