--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,32 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backll"
+    android:background="@drawable/abc"
     tools:context=".LoginActivity">
 
 
     <ImageView
         android:id="@+id/app_logo"
-        android:layout_width="145dp"
-        android:layout_height="113dp"
-        android:layout_above="@+id/main_join_now_btn"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="165dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="306dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="151dp"
+        android:layout_marginEnd="-3dp"
+        android:layout_marginBottom="446dp"
         android:layout_toStartOf="@+id/app_slogan"
         android:src="@drawable/logo3" />
 
     <TextView
         android:id="@+id/app_slogan"
-        android:layout_width="232dp"
-        android:layout_height="128dp"
+        android:layout_width="233dp"
+        android:layout_height="131dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="186dp"
-        android:layout_marginEnd="17dp"
+        android:layout_marginTop="175dp"
+        android:layout_marginEnd="1dp"
         android:text="@string/dreammart"
         android:textAlignment="center"
         android:textAllCaps="false"
@@ -41,8 +41,9 @@
         android:id="@+id/login_phone_number_input"
         android:layout_width="380dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/app_slogan"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="319dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/input_design"
         android:hint="@string/login_phone_number_input"
